2009-12-17  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	Do not add duplicated fragments to the ring

2009-12-17  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	Add bandwidth attribute to the stream info in the main playlist

2009-12-17  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	Remove unused setter and make 'hostname' private

2009-12-16  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/common.py:
	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.py:
	* flumotion/component/consumers/httpfragstreamer/mpegtssegmenter.py:
	* flumotion/component/consumers/httpfragstreamer/resources.py:
	* flumotion/component/muxers/mpegts/mpegts.py:
	* flumotion/test/test_dummy.py:
	Fix pep8

2009-12-16  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/muxers/mpegts/Makefile.am:
	* flumotion/component/muxers/mpegts/mpegts.xml:
	* flumotion/component/muxers/mpegts/keyframescounter.py (deleted):
	Remove unused keyframescounter.py.

2009-12-16  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.py:
	* flumotion/component/consumers/httpfragstreamer/resources.py:
	Fix bytes sent/received calculation

2009-12-16  Marc-André Lureau  <mlureau@flumotion.com>

	* Makefile.am:
	* configure.ac:
	* flumotion/Makefile.am:
	* flumotion/test (added):
	Add simple `make check`, with a Dummy test.
	* flumotion/misc/setup.py (removed)
	Remove generated file.

2009-12-16 Andoni Morales Alastruey <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	Make 'collections.deque' compatible with Python24 by removing the
	'maxlen' parameter
