@@ -1,3 +1,8 @@
+2009-12-18  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/test/test_component.py (added):
+	Added test suite for the HLSRing
+
 2009-12-17  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
